--- a/public/main.html
+++ b/public/main.html
@@ -1,1 +1,19 @@
+<!DOCTYPE html>
+<html lang="ko">
+<head>
+  <meta charset="UTF-8">
+  <title>The Listen 메인</title>
+  <style>
+    body { font-family: 'Noto Sans KR', sans-serif; text-align: center; background: #f7f9fc; margin-top: 60px; }
+    h1 { color: #0b1220; }
+    p { color: #555; }
+    button { margin-top: 30px; padding: 10px 20px; background: #007bff; color: #fff; border: none; border-radius: 6px; cursor: pointer; }
+  </style>
+</head>
+<body>
+  <h1>🚚 The Listen</h1>
+  <p>AI·GPS 기반 배송 경로 최적화 시스템 메인화면</p>
+  <button onclick="alert('배송기사 리스트로 이동 예정!')">배송관리 보기</button>
+</body>
+</html>
 
