--- a/public/main.html
+++ b/public/main.html
@@ -1,19 +1,33 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-  <meta charset="UTF-8">
-  <title>The Listen 메인</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>The Listen 메인화면</title>
   <style>
-    body { font-family: 'Noto Sans KR', sans-serif; text-align: center; background: #f7f9fc; margin-top: 60px; }
-    h1 { color: #0b1220; }
-    p { color: #555; }
-    button { margin-top: 30px; padding: 10px 20px; background: #007bff; color: #fff; border: none; border-radius: 6px; cursor: pointer; }
+    body {
+      font-family: 'Noto Sans KR', sans-serif;
+      background-color: #f5f6fa;
+      text-align: center;
+      padding-top: 80px;
+    }
+    h1 {
+      color: #0b1220;
+    }
+    button {
+      padding: 12px 20px;
+      font-size: 16px;
+      background-color: #2f80ed;
+      color: white;
+      border: none;
+      border-radius: 6px;
+      cursor: pointer;
+    }
   </style>
 </head>
 <body>
   <h1>🚚 The Listen</h1>
   <p>AI·GPS 기반 배송 경로 최적화 시스템 메인화면</p>
-  <button onclick="alert('배송기사 리스트로 이동 예정!')">배송관리 보기</button>
+  <button onclick="alert('배송 관리 페이지로 이동합니다!');">배송관리 보기</button>
 </body>
 </html>
-
