--- a/public/main.html
+++ b/public/main.html
@@ -1,33 +1,28 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
   <title>The Listen 메인화면</title>
   <style>
     body {
-      font-family: 'Noto Sans KR', sans-serif;
-      background-color: #f5f6fa;
+      background-color: white;
+      font-family: "Noto Sans KR", sans-serif;
       text-align: center;
-      padding-top: 80px;
-    }
-    h1 {
-      color: #0b1220;
     }
     button {
-      padding: 12px 20px;
-      font-size: 16px;
-      background-color: #2f80ed;
+      background-color: #3b82f6;
       color: white;
       border: none;
+      padding: 10px 20px;
       border-radius: 6px;
       cursor: pointer;
+      margin-top: 20px;
     }
   </style>
 </head>
 <body>
   <h1>🚚 The Listen</h1>
-  <p>AI·GPS 기반 배송 경로 최적화 시스템 메인화면</p>
-  <button onclick="alert('배송 관리 페이지로 이동합니다!');">배송관리 보기</button>
+  <h2>AI·GPS 기반 배송 경로 최적화 시스템 메인화면</h2>
+  <button onclick="alert('배송 관리 페이지로 이동합니다');">배송관리 보기</button>
 </body>
 </html>
