--- a/public/main.html
+++ b/public/main.html
@@ -2,27 +2,29 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8">
-  <title>The Listen 메인화면</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>The Listen - 메인</title>
   <style>
     body {
-      background-color: white;
-      font-family: "Noto Sans KR", sans-serif;
+      font-family: 'Noto Sans KR', sans-serif;
+      background-color: #ffffff;
+      color: #222;
       text-align: center;
+      margin-top: 120px;
     }
+    h1 { font-size: 2.2rem; margin-bottom: 0.5rem; }
+    p { font-size: 1.2rem; margin-bottom: 2rem; }
     button {
-      background-color: #3b82f6;
-      color: white;
-      border: none;
-      padding: 10px 20px;
-      border-radius: 6px;
-      cursor: pointer;
-      margin-top: 20px;
+      background-color: #007bff; color: white;
+      padding: 12px 28px; border: none;
+      border-radius: 6px; cursor: pointer; font-size: 1rem;
     }
+    button:hover { background-color: #0056b3; }
   </style>
 </head>
 <body>
   <h1>🚚 The Listen</h1>
-  <h2>AI·GPS 기반 배송 경로 최적화 시스템 메인화면</h2>
-  <button onclick="alert('배송 관리 페이지로 이동합니다');">배송관리 보기</button>
+  <p>AI·GPS 기반 배송 경로 최적화 시스템 메인화면</p>
+  <button onclick="alert('배송 관리 시스템 모듈로 연결됩니다.');">배송관리 보기</button>
 </body>
 </html>
