--- a/public/index.html
+++ b/public/index.html
@@ -1,51 +1,74 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>The Listen - 로그인</title>
   <style>
     body {
+      margin: 0;
       font-family: 'Noto Sans KR', sans-serif;
       background-color: #0d1117;
       color: white;
       display: flex;
-      flex-direction: column;
-      align-items: center;
       justify-content: center;
+      align-items: center;
       height: 100vh;
+      flex-direction: column;
     }
-    h1 { font-size: 2.2rem; margin-bottom: 0.5rem; }
-    p { margin-bottom: 1.5rem; color: #c9d1d9; }
+    .container {
+      background: #161b22;
+      padding: 40px;
+      border-radius: 12px;
+      text-align: center;
+      width: 320px;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.4);
+    }
+    h1 {
+      font-size: 26px;
+      margin-bottom: 20px;
+    }
     input {
-      width: 250px; padding: 10px; margin: 8px 0;
-      border: none; border-radius: 6px;
+      width: 100%;
+      padding: 12px;
+      margin: 8px 0;
+      border: none;
+      border-radius: 8px;
     }
     button {
-      background-color: #238636; border: none; color: white;
-      padding: 10px 20px; border-radius: 6px; cursor: pointer;
+      width: 100%;
+      background-color: #007bff;
+      color: white;
+      padding: 12px;
+      border: none;
+      border-radius: 8px;
+      font-size: 16px;
+      cursor: pointer;
     }
-    button:hover { background-color: #2ea043; }
+    button:hover {
+      background-color: #0056b3;
+    }
   </style>
 </head>
 <body>
-  <h1>🚚 The Listen</h1>
-  <p>AI·GPS 기반 배송 최적화 로그인</p>
-
-  <input type="text" id="id" placeholder="아이디" />
-  <input type="password" id="pw" placeholder="비밀번호" />
-  <button onclick="login()">로그인</button>
+  <div class="container">
+    <h1>🚚 The Listen</h1>
+    <p>AI·GPS 기반 배송 경로 최적화 로그인</p>
+    <input type="text" id="id" placeholder="아이디" />
+    <input type="password" id="pw" placeholder="비밀번호" />
+    <button onclick="login()">로그인</button>
+  </div>
 
   <script>
     function login() {
-      const id = document.getElementById('id').value.trim();
-      const pw = document.getElementById('pw').value.trim();
+      const id = document.getElementById('id').value;
+      const pw = document.getElementById('pw').value;
 
       if (id === '1234' && pw === '1234') {
-        alert('로그인 성공! 다음 단계로 이동합니다.');
+        alert('로그인 성공! 메인화면으로 이동합니다.');
         window.location.href = '/main';
       } else {
-        alert('아이디 또는 비밀번호가 올바르지 않습니다.');
+        alert('아이디 또는 비밀번호가 잘못되었습니다.');
       }
     }
   </script>
