--- a/public/main.html
+++ b/public/main.html
@@ -1,30 +1,49 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>The Listen - 메인</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>The Listen - 메인화면</title>
   <style>
     body {
       font-family: 'Noto Sans KR', sans-serif;
-      background-color: #ffffff;
-      color: #222;
       text-align: center;
-      margin-top: 120px;
+      margin: 0;
+      background-color: #ffffff;
+      color: #000;
     }
-    h1 { font-size: 2.2rem; margin-bottom: 0.5rem; }
-    p { font-size: 1.2rem; margin-bottom: 2rem; }
+    header {
+      background-color: #007bff;
+      color: white;
+      padding: 20px 0;
+      font-size: 1.5rem;
+      font-weight: 600;
+    }
     button {
-      background-color: #007bff; color: white;
-      padding: 12px 28px; border: none;
-      border-radius: 6px; cursor: pointer; font-size: 1rem;
+      margin-top: 50px;
+      background-color: #007bff;
+      border: none;
+      color: white;
+      padding: 14px 32px;
+      font-size: 1.1rem;
+      border-radius: 8px;
+      cursor: pointer;
     }
-    button:hover { background-color: #0056b3; }
+    button:hover {
+      background-color: #0056b3;
+    }
   </style>
 </head>
 <body>
-  <h1>🚚 The Listen</h1>
-  <p>AI·GPS 기반 배송 경로 최적화 시스템 메인화면</p>
-  <button onclick="alert('배송 관리 시스템 모듈로 연결됩니다.');">배송관리 보기</button>
+  <header>🚚 The Listen</header>
+  <h2>AI·GPS 기반 배송 경로 최적화 시스템 메인화면</h2>
+
+  <button onclick="goMap()">배송경로 보기</button>
+
+  <script>
+    function goMap() {
+      window.location.href = '/map';
+    }
+  </script>
 </body>
 </html>
