--- a/public/index.html
+++ b/public/index.html
@@ -2,73 +2,52 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8" />
+  <title>The Listen 로그인</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>The Listen - 로그인</title>
   <style>
     body {
-      margin: 0;
       font-family: 'Noto Sans KR', sans-serif;
-      background-color: #0d1117;
+      background: #0d1117;
       color: white;
       display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
       flex-direction: column;
-    }
-    .container {
-      background: #161b22;
-      padding: 40px;
-      border-radius: 12px;
-      text-align: center;
-      width: 320px;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.4);
-    }
-    h1 {
-      font-size: 26px;
-      margin-bottom: 20px;
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
     }
     input {
-      width: 100%;
-      padding: 12px;
-      margin: 8px 0;
+      padding: 10px;
+      margin: 5px;
+      border-radius: 6px;
       border: none;
-      border-radius: 8px;
+      width: 250px;
     }
     button {
-      width: 100%;
-      background-color: #007bff;
+      background: #007bff;
       color: white;
-      padding: 12px;
       border: none;
-      border-radius: 8px;
-      font-size: 16px;
+      border-radius: 6px;
+      padding: 10px 20px;
       cursor: pointer;
-    }
-    button:hover {
-      background-color: #0056b3;
     }
   </style>
 </head>
 <body>
-  <div class="container">
-    <h1>🚚 The Listen</h1>
-    <p>AI·GPS 기반 배송 경로 최적화 로그인</p>
-    <input type="text" id="id" placeholder="아이디" />
-    <input type="password" id="pw" placeholder="비밀번호" />
-    <button onclick="login()">로그인</button>
-  </div>
+  <h1>🚚 The Listen</h1>
+  <h3>AI·GPS 기반 배송 경로 최적화 로그인</h3>
+  <input type="text" id="id" placeholder="아이디" /><br />
+  <input type="password" id="pw" placeholder="비밀번호" /><br />
+  <button onclick="login()">로그인</button>
 
   <script>
     function login() {
       const id = document.getElementById('id').value;
       const pw = document.getElementById('pw').value;
-
-      if (id === '1234' && pw === '1234') {
-        alert('로그인 성공! 메인화면으로 이동합니다.');
+      if (id && pw) {
+        alert('로그인 성공! 다음 단계로 이동합니다.');
         window.location.href = '/main';
       } else {
-        alert('아이디 또는 비밀번호가 잘못되었습니다.');
+        alert('아이디와 비밀번호를 입력해주세요.');
       }
     }
   </script>
