--- a/public/map.html
+++ b/public/map.html
@@ -2,56 +2,47 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8" />
+  <title>The Listen 배송경로 지도</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>The Listen - 배송경로 지도</title>
   <style>
     body {
       margin: 0;
       font-family: 'Noto Sans KR', sans-serif;
-      background-color: #f5f5f5;
     }
     header {
       background-color: #007bff;
       color: white;
       text-align: center;
-      padding: 15px 0;
-      font-size: 1.4rem;
+      padding: 16px;
       font-weight: 600;
+      font-size: 1.2rem;
     }
     #map {
       width: 100%;
-      height: calc(100vh - 70px);
+      height: calc(100vh - 60px);
     }
   </style>
 </head>
 <body>
-  <header>🚚 The Listen 배송경로 지도</header>
+  <header>🚛 The Listen 배송경로 지도</header>
   <div id="map"></div>
 
-  <!-- ✅ 카카오맵 SDK (테스트용 키로 교체 가능) -->
+  <!-- ✅ 카카오 지도 SDK (테스트용 키) -->
   <script src="https://dapi.kakao.com/v2/maps/sdk.js?appkey=1e3c021083458339854b888af0db0328"></script>
+
   <script>
-    // 지도 초기화
-    window.onload = function () {
-      const mapContainer = document.getElementById('map');
-      const mapOption = {
-        center: new kakao.maps.LatLng(37.5665, 126.9780), // 서울 중심
-        level: 6
-      };
-      const map = new kakao.maps.Map(mapContainer, mapOption);
-
-      // 기본 마커 표시
-      const marker = new kakao.maps.Marker({
-        position: new kakao.maps.LatLng(37.5665, 126.9780),
-        map: map
-      });
-
-      // 간단한 정보창 표시
-      const info = new kakao.maps.InfoWindow({
-        content: '<div style="padding:5px;">📦 The Listen<br>AI-GPS 배송경로 시스템</div>'
-      });
-      info.open(map, marker);
+    const container = document.getElementById('map');
+    const options = {
+      center: new kakao.maps.LatLng(37.5665, 126.9780), // 서울 시청 좌표
+      level: 4
     };
+    const map = new kakao.maps.Map(container, options);
+
+    // 마커 추가
+    const marker = new kakao.maps.Marker({
+      position: new kakao.maps.LatLng(37.5665, 126.9780),
+      map: map
+    });
   </script>
 </body>
 </html>
