--- a/public/map.html
+++ b/public/map.html
@@ -21,8 +21,8 @@
       padding: 14px 0;
       font-size: 1.4rem;
       font-weight: 600;
-      z-index: 10;
       position: relative;
+      z-index: 10;
     }
     #map {
       width: 100%;
@@ -30,22 +30,6 @@
       position: absolute;
       top: 60px;
       left: 0;
-    }
-    .label {
-      background: white;
-      border: 1px solid #333;
-      border-radius: 5px;
-      padding: 2px 6px;
-      font-size: 12px;
-      white-space: nowrap;
-    }
-    .my-location {
-      background-color: #ff4d4d;
-      color: white;
-      border: 1px solid #333;
-      border-radius: 5px;
-      padding: 2px 6px;
-      font-size: 12px;
     }
   </style>
 </head>
@@ -57,13 +41,11 @@
   <script src="https://dapi.kakao.com/v2/maps/sdk.js?appkey=301ef23f56e23f0dee3eaf47fe734b03"></script>
   <script>
     const deliveryPoints = [
-      { name: "서울 시청", lat: 37.5665, lng: 126.9780 },
-      { name: "강남역", lat: 37.4979, lng: 127.0276 },
-      { name: "송파구청", lat: 37.5145, lng: 127.1059 },
-      { name: "구로디지털단지", lat: 37.4843, lng: 126.9011 }
+      { lat: 37.5665, lng: 126.9780 }, // 서울 시청
+      { lat: 37.4979, lng: 127.0276 }, // 강남역
+      { lat: 37.5145, lng: 127.1059 }, // 송파구청
+      { lat: 37.4843, lng: 126.9011 }  // 구로디지털단지
     ];
-
-    let map, bounds;
 
     window.onload = function() {
       const mapContainer = document.getElementById("map");
@@ -71,45 +53,34 @@
         center: new kakao.maps.LatLng(37.5665, 126.9780),
         level: 7
       };
-      map = new kakao.maps.Map(mapContainer, mapOption);
-      bounds = new kakao.maps.LatLngBounds();
+      const map = new kakao.maps.Map(mapContainer, mapOption);
+      const bounds = new kakao.maps.LatLngBounds();
 
-      // 배송지 마커 표시
-      deliveryPoints.forEach((point, idx) => {
+      // ✅ 배송지 마커 표시 (텍스트 제거)
+      deliveryPoints.forEach((point) => {
         const position = new kakao.maps.LatLng(point.lat, point.lng);
         new kakao.maps.Marker({ map, position });
-        const overlay = new kakao.maps.CustomOverlay({
-          position,
-          content: `<div class="label">${idx + 1}. ${point.name}</div>`,
-          yAnchor: 2
-        });
-        overlay.setMap(map);
         bounds.extend(position);
       });
 
-      // 내 위치 불러오기
+      // ✅ 내 위치 파란 점 표시
       if (navigator.geolocation) {
         navigator.geolocation.getCurrentPosition((pos) => {
           const myLat = pos.coords.latitude;
           const myLng = pos.coords.longitude;
           const myPos = new kakao.maps.LatLng(myLat, myLng);
 
-          const myMarker = new kakao.maps.Marker({
-            position: myPos,
-            map,
-            image: new kakao.maps.MarkerImage(
-              "https://t1.daumcdn.net/localimg/localimages/07/mapapidoc/red_b.png",
-              new kakao.maps.Size(64, 69),
-              { offset: new kakao.maps.Point(27, 69) }
-            )
+          // 🔵 파란 점 표시
+          const circle = new kakao.maps.Circle({
+            center: myPos,
+            radius: 12,
+            strokeWeight: 2,
+            strokeColor: "#1E90FF",
+            strokeOpacity: 0.7,
+            fillColor: "#1E90FF",
+            fillOpacity: 0.9
           });
-
-          const myOverlay = new kakao.maps.CustomOverlay({
-            position: myPos,
-            content: '<div class="my-location">📍 내 위치</div>',
-            yAnchor: 2
-          });
-          myOverlay.setMap(map);
+          circle.setMap(map);
 
           bounds.extend(myPos);
           map.setBounds(bounds);
